# Advanced-Cpp-Excellenteam-WebHawk

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile-backend-registry  Dockerfile-middleware  Dockerfile-security  Dockerfile-users  README.md  docker-compose.yml
db/: backend_registry.sql  schema.sql  security_engine.sql  users.sql
middleware/: CMakeLists.txt  config.json  main.cc
middleware/clients/: ServiceEndpoints.h
middleware/services/: ProxyService.cc  ProxyService.h
middleware/utils/: RequestPayloadBuilder.h
postman/: WebHawk_Full_Collection.json  webhawk_security_engine.postman_collection.json
services/backend-registry/: CMakeLists.txt  main.cc
services/backend-registry/controllers/: BackendController.cc  BackendController.h
services/backend-registry/repositories/: BackendRepository.cc  BackendRepository.h
services/backend-registry/services/: BackendService.cc  BackendService.h
services/backend-registry/utils/: ApiKeyGenerator.h
services/backend_registry/: main.cc
services/backend_registry/controllers/: BackendController.cc  BackendController.h
services/backend_registry/repositories/: BackendRepository.cc  BackendRepository.h
services/backend_registry/services/: BackendService.cc  BackendService.h
services/security-engine/: CMakeLists.txt  config.json  main.cc
services/security-engine/controllers/: SecurityController.cc  SecurityController.h
services/security-engine/repositories/: SecurityRepository.cc  SecurityRepository.h
services/security-engine/services/: SecurityService.cc  SecurityService.h
services/security-engine/utils/: SecurityConfig.h
services/security_engine/: CMakeLists.txt
services/security_engine/controllers/: SecurityController.cc  SecurityController.h
services/security_engine/repositories/: SecurityRepository.cc  SecurityRepository.h
services/security_engine/services/: SecurityService.cc
services/security_engine/utils/: SecurityConfig.h
services/shared/: DB_Repository.cc  DB_Repository.h  DbConfig.h  EnvLoader.h  ErrorHandlers.h
services/users/: .env.example  .gitignore  CMakeLists.txt  README.md  config.json  main.cc
(+14 files in other folders)
